--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-DATABASE_URL=mysql://admin:sizy0508@sizy-prod.cpawnuybgd57.ap-northeast-2.rds.amazonaws.com:3306/sizy-prod
+DATABASE_URL=mysql://admin:sizy0508@sizy-prod.cpawnuybgd57.ap-northeast-2.rds.amazonaws.com:3306/sizy-prod?connection_limit=1
 HASH_KEY=901fce6433ba80d352dc30c11f14f581
-MJ_APIKEY_PUBLIC=aece67acbd777831e99a32862ea52b00
-MJ_APIKEY_PRIVATE=023082acdf92278c5f097e1fd51552aa
