--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "sync-db": "npx prisma db pull && npx prisma generate",
-    "deploy": "yarn sync-db && yarn build && serverless deploy --stage development",
+    "deploy": "npm run sync-db && npm run build && serverless deploy --stage development",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -65,6 +65,7 @@
     "prettier": "^2.3.2",
     "prisma": "5.1.1",
     "serverless": "^3.30.1",
+    "serverless-dotenv-plugin": "^6.0.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.5",
