--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "crypto-random-string": "^3.3.1",
     "csv-parser": "^3.0.0",
+    "dayjs": "^1.11.10",
     "lodash": "^4.17.21",
     "passport-jwt": "^4.0.1",
     "randomstring": "^1.2.3",
