--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "sync-db": "npx prisma db pull && npx prisma generate",
-    "deploy": "npm run sync-db && npm run build && serverless deploy --stage development",
+    "db:sync": "npx prisma db pull && npx prisma generate",
+    "deploy": "npm run db:sync && npm run build && serverless deploy --stage development",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -40,6 +40,7 @@
     "crypto-random-string": "^3.3.1",
     "csv-parser": "^3.0.0",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "passport-jwt": "^4.0.1",
     "randomstring": "^1.2.3",
