--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "db:sync": "npx prisma db pull && npx prisma generate",
+    "deploy:prod": "npm run db:sync && npm run build && serverless deploy --stage production",
     "deploy": "npm run db:sync && npm run build && serverless deploy --stage development",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
