--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^5.1.1",
+    "@sentry/profiling-node": "^1.2.6",
     "@sentry/serverless": "^7.77.0",
     "@vendia/serverless-express": "^4.10.1",
     "aws-lambda": "^1.0.7",
@@ -71,6 +72,7 @@
     "prisma": "5.1.1",
     "serverless": "^3.30.1",
     "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-offline": "^13.2.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.5",
