--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DATABASE_URL=mysql://admin:sizy0508@sizy-prod.cpawnuybgd57.ap-northeast-2.rds.amazonaws.com:3306/sizy-prod?connection_limit=1
 HASH_KEY=901fce6433ba80d352dc30c11f14f581
+GIT_TOKEN=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
 TOSS_SECRET_KEY=test_sk_E92LAa5PVblmMoQXQPGB87YmpXyJ
 TOSS_CLIENT_KEY=test_ck_XZYkKL4MrjwZPAdZlk9m80zJwlEW
